Use textarea to fix on iPhones

--- a/src/ngx-text-editor/ngx-text-editor.component.scss
+++ b/src/ngx-text-editor/ngx-text-editor.component.scss
@@ -20,6 +20,9 @@
       overflow-y: auto;
       z-index: 2;
       position: relative;
+      width: 100%;
+      max-width: 100%;
+      min-width: 100%;
 
       &:focus,
       &.focus {
